common makefile header

--- a/dns_related/Makefile
+++ b/dns_related/Makefile
@@ -1,8 +1,4 @@
-
-CC=g++
-CXXFLAGS=-std=c++11
-CFLAGS = -I../include -ggdb -O0 -D_REENTRANT -Wall
-LIBS = ../lib/libhgjunp.a -lpthread
+-include ../unp_make.env
 
 PROGS = dns_server dns_client
 
