add tcp_connect using getaddrinfo

--- a/dns_related/Makefile
+++ b/dns_related/Makefile
@@ -1,6 +1,6 @@
 -include ../unp_make.env
 
-PROGS = dns_server dns_client
+PROGS = dns_server dns_client addr_info
 
 all: ${PROGS}
 
@@ -9,6 +9,9 @@ dns_server:	dns_server.o
 
 dns_client: dns_client.o
 	     ${CC} ${CXXFLAGS} ${CFLAGS} -o $@ dns_client.o ${LIBS}
+
+addr_info: addrinfo.o
+	${CC} ${CXXFLAGS} ${CFLAGS} -o $@ addrinfo.o ${LIBS}
 
 %.o: %.cc
 	${CC} ${CXXFLAGS} ${CFLAGS} -c $<
